2016-01-01  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * v.2.1.9 Improved performance of equal and region iterators and removed
        the container traits information, which was not useful.

2015-12-06  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * v2.1.8 Fixed Ticket #5 and Ticket #4 raised by Michał Garapich. Thanks
        for supporting the library by contributing bugs.

2015-11-29  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * v2.1.7 Greatly improves performance of nearest neighbor search and
        iteration on nearest neighbors; between 5 to 100 times. Moderate
        improvement on finding equals or simply find() in containers. Minor
        improvements to mapping iterators too, which improve insertion/removal
        times in the kd-tree. The improvements were felt significant enough to
        warrant a specific release of the library, even though no other feature
        or bug has been fixed in this version.

2014-10-27  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * v2.1.6 Ticket #2 (https://sourceforge.net/p/spatial/tickets/2/)
        reported by Ed Baskerville has been solved. To solve it, C++11 support
        for compilation has been added to the library for Clang++ and
        G++. Additionally support for libc++ and Clang++, has also been
        added. Note that C++11 support only means it compiles when the compiler
        is set to be compliant with C++11. The library's APIs have yet so
        support new semantics such as rvalues, initialization lists, etc.

2014-10-22  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * v2.1.5 ticket #3 (https://sourceforge.net/p/spatial/tickets/3/)
        reported by Michał Garapich has been solved. neighbor_iterator can now
        be used with const containers, as expected.

2014-10-21  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>
